# fdl21-stackuse-vp

./: README.md
sw/stacksize/: Makefile  main.c
vp/src/: CMakeLists.txt
vp/src/core/common/: CMakeLists.txt  functions.cpp  functions.h  stack_usage.h  trap.h
vp/src/core/rv32/: CMakeLists.txt  iss.cpp  iss.h
vp/src/platform/hifive/: hifive_main.cpp
vp/src/platform/tiny32/: CMakeLists.txt  tiny32_main.cpp
vp/src/stacksize/: CMakeLists.txt  functions.cpp  functions.h  stack_usage.cpp  stack_usage.h  stacksize.cpp  stacksize.h
vp/src/stacksize/dwarf/: CMakeLists.txt  elf_file.h
vp/src/stacksize/elf/: CMakeLists.txt  elf_file.cpp
vp/src/stacksize/rtos/: CMakeLists.txt  riot.cpp  riot.h  rtos.cpp  rtos.h
